--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,5 @@ jobs:
           git fetch --unshallow
           git checkout dev
           git pull
-          git merge --no-ff master -m "Auto-merge master back to dev"
+          git merge --no-commit master
           git push
